--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "d3-geo-projection": "^1.1.1",
     "file-loader": "^0.9.0",
     "gh-pages": "^0.12.0",
+    "history": "^4.5.0",
     "html-webpack-plugin": "^2.24.1",
     "jquery": "^3.1.1",
     "json-loader": "^0.5.4",
@@ -38,6 +39,7 @@
     "postcss-loader": "^1.1.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-router": "^3.0.0",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "three": "^0.82.1",
