add support to html5mode in heroku

--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "TODO: write a description",
   "main": "webpack.config.js",
   "scripts": {
-    "start": "./node_modules/.bin/webpack-dev-server --progress --colors",
+    "dev": "./node_modules/.bin/webpack-dev-server --progress --colors",
+    "start": "./node_modules/.bin/superstatic --port $PORT --host 0.0.0.0",
     "test": "./node_modules/.bin/eslint . && ./node_modules/.bin/jscs ./src",
     "build": "NODE_ENV=production ./node_modules/.bin/webpack",
-    "publish": "NODE_ENV=production yarn run build && node ./scripts/publish"
+    "publish": "NODE_ENV=production yarn run build && node ./scripts/publish",
+    "postinstall": "npm run build"
   },
   "repository": {
     "type": "git",
