--- a/package.json
+++ b/package.json
@@ -51,14 +51,14 @@
     "url-loader": "^0.5.7",
     "vizz-components": "^0.1.2",
     "webpack": "^1.13.3",
-    "webpack-dev-server": "^1.16.2"
-  },
-  "devDependencies": {
+    "webpack-dev-server": "^1.16.2",
     "eslint": "^3.10.2",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-plugin-import": "^2.1.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.7.1",
     "jscs": "^3.0.7"
+  },
+  "devDependencies":{
   }
 }
