--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "./node_modules/.bin/webpack-dev-server --progress --colors",
     "start": "./node_modules/.bin/superstatic --port $PORT --host 0.0.0.0",
     "test": "./node_modules/.bin/eslint . && ./node_modules/.bin/jscs ./src",
-    "build": "NODE_ENV=production ./node_modules/.bin/webpack",
+    "build": "NODE_ENV=production ./node_modules/.bin/webpack --display-error-details",
     "publish": "NODE_ENV=production yarn run build && node ./scripts/publish",
     "postinstall": "npm run build"
   },
