--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "TODO: write a description",
   "main": "webpack.config.js",
+  "engines": {
+   "node": "7.0.x",
+   "yarn": "0.16.1"
+ },
   "scripts": {
     "dev": "./node_modules/.bin/webpack-dev-server --progress --colors",
     "start": "./node_modules/.bin/superstatic --port $PORT --host 0.0.0.0",
@@ -15,7 +19,7 @@
     "type": "git",
     "url": "git+https://github.com/hectoruch/mapGame"
   },
-  
+
   "author": "Hector Arce",
   "license": "MIT",
   "bugs": {
